--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,18 +1,18 @@
 <!-- Primary Meta Tags -->
 <title></title>
-<meta name="title" content="Leonardo Bezerra - Academic CV">
-<meta name="description" content="Assistant Professor @ Federal University of Rio Grande do Norte (UFRN)">
+<meta name="title" content="Leonardo C. T. Bezerra - Academic webpage">
+<meta name="description" content="Lecturer in Sociotechnical & Responsible AI / Data Science">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://metatags.io/">
-<meta property="og:title" content="Leonardo Bezerra - Academic CV">
-<meta property="og:description" content="Assistant Professor @ Federal University of Rio Grande do Norte (UFRN)">
+<meta property="og:title" content="Leonardo C. T. Bezerra - Academic webpage">
+<meta property="og:description" content="Lecturer in Sociotechnical & Responsible AI / Data Science">
 <meta property="og:image" content="img/us.jpg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://metatags.io/">
-<meta property="twitter:title" content="Leonardo Bezerra - Academic CV">
-<meta property="twitter:description" content="Assistant Professor @ Federal University of Rio Grande do Norte (UFRN)">
+<meta property="twitter:title" content="Leonardo C. T. Bezerra - Academic webpage">
+<meta property="twitter:description" content="Lecturer in Sociotechnical & Responsible AI / Data Science">
 <meta property="twitter:image" content="img/us.jpg">
