--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -4,16 +4,16 @@
 @import "{{ site.theme }}";
 
 #header {
-  height: 40px;
+  height: 38px;
   position: fixed;
   background: white;
   z-index: 100;
   left: 0px;
   top: 0px;
   width: 100%;
-  padding: 0 20px;
+  padding: 5px;
 }
 
-.wrapper {
-  padding: 40px 0 0 0;
+body {
+  padding: 38px 0 0 0;
 }
