Update and rename default2.html to default.html

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -26,8 +26,8 @@
         <a href="https://www.researchgate.net/profile/Leonardo-Bezerra-3" target="_blank"><img src="https://img.shields.io/badge/-researchgate-orange.svg?logo=researchgate&style=for-the-badge&logoColor=white"/></a>
         <a href="https://github.com/leobezerra/academia/raw/master/docs/cv.pdf" target="_blank"><img src="https://img.shields.io/badge/-cv-red.svg?logo=adobeacrobatreader&style=for-the-badge"/></a>
     </div> -->
-    <!-- <div class="wrapper"> -->
+    <div class="content">
         {{ content }}
-    <!-- </div> -->
+    </div>
   </body>
 </html>
