[docs] _layouts/default.html: responsive header

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -19,6 +19,10 @@
   </head>
   <body>
     <div id="header">
+      <div id="title" class="float-child">
+        <h3>Leonardo C. T. Bezerra</h3>
+      </div>
+      <div id="nav" class="float-child">
         <a href="#news"><img src="https://img.shields.io/badge/-news-pink.svg?style=for-the-badge"/></a> 
         <a href="#places"><img src="https://img.shields.io/badge/-places-purple.svg?style=for-the-badge"/></a>
         <a href="#history"><img src="https://img.shields.io/badge/-history-blue.svg?style=for-the-badge&logoColor=white"/></a>
@@ -26,6 +30,7 @@
         <a href="#theses"><img src="https://img.shields.io/badge/-supervision-yellow.svg?style=for-the-badge&logoColor=white"/></a>
         <a href="#publications"><img src="https://img.shields.io/badge/-publications-orange.svg?style=for-the-badge"/></a>
         <a href="#communication"><img src="https://img.shields.io/badge/-communication-red.svg?style=for-the-badge"/></a>
+      </div>
     </div>
     <div class="container-lg px-3 my-5 markdown-body">
         {{ content }}
