[docs] _layouts/default.html: float-left and float-right

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -19,10 +19,10 @@
   </head>
   <body>
     <div id="header">
-      <div id="title" class="float-child">
+      <div id="title" class="float-left">
         <h3>Leonardo C. T. Bezerra</h3>
       </div>
-      <div id="nav" class="float-child">
+      <div id="nav" class="float-right">
         <a href="#news"><img src="https://img.shields.io/badge/-news-pink.svg?style=for-the-badge"/></a> 
         <a href="#places"><img src="https://img.shields.io/badge/-places-purple.svg?style=for-the-badge"/></a>
         <a href="#history"><img src="https://img.shields.io/badge/-history-blue.svg?style=for-the-badge&logoColor=white"/></a>
