[docs] assets/css/style.scss: #header background

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -6,7 +6,7 @@
 #header {
   height: 38px;
   position: fixed;
-  background: white;
+  background: black;
   z-index: 100;
   left: 0px;
   top: 0px;
