[docs] assets/css/style.scss: a a:hover a:visited font-weight

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -25,14 +25,17 @@ body {
 
 a {
   color: #f6e06a;
+  font-weight: 500;
 }
 
 a:hover {
   color: yellow;
+  font-weight: 500;
 }
 
 a:visited {
   color: #f6e06a;
+  font-weight: 500;
 } 
 
 strong {
