[docs] _layouts/default.html: reverted #top anchor position

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div id="header">
-      <a name="top"/>
+      <!-- <a name="top"/> -->
       <div id="title" class="float-left">
         <h4>Leonardo C. T. Bezerra</h4>
       </div>
