[docs] assets/css/style.css: @media screen .float-left width

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -62,12 +62,15 @@ strong {
 }
 
 @media screen and (max-width: 600px) {
+  .float-left {
+    width: auto;
+  }
   .float-right {
     float: none;
     width: auto;
     height: 76px;
   }
   #header {
-    height: 108px;
+    height: 120px;
   }
 }
