[docs] assets/css/style.scss: responsive header

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -71,6 +71,9 @@ strong {
     height: 76px;
   }
   #header {
-    height: 130px;
+    height: 108px;
+  }
+  body {
+    padding: 130px 0 0;
   }
 }
