[docs] assets/css/style.scss: #header width and alignment

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -5,6 +5,9 @@
 
 #header {
   height: 38px;
+  max-width: 1012px;
+  margin-left: auto;
+  margin-right: auto;
   position: fixed;
   background: black;
   z-index: 100;
