--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -18,7 +18,7 @@
     {% include head-custom.html %}
   </head>
   <body>
-    <div id="header" class="container-lg">
+    <div id="header">
       <!-- <a name="top"/> -->
       <div id="title" class="float-left">
         <h4>Leonardo C. T. Bezerra</h4>
