--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -8,6 +8,7 @@
   max-width: 1012px;
   margin-left: auto;
   margin-right: auto;
+  top: 0px;
   position: fixed;
   background: black;
   z-index: 100;
@@ -44,8 +45,9 @@ strong {
 
 .float-left {
   float: left;
-  padding: 2px 5px;
+  padding: 2px 10px;
 }
+
 .float-right {
   float: left;
 }
