--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -44,11 +44,13 @@ strong {
 }
 
 .float-left {
+  float: none;
   display: inline-block;
   padding: 2px 10px;
 }
 
 .float-right {
+  float: none;
   display: inline-block;
 }
 
