--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -43,13 +43,13 @@ strong {
   font-weight: 500;
 }
 
-.float-left {
+.float-left-child {
   float: none;
   display: inline-block;
   padding: 2px 10px;
 }
 
-.float-right {
+.float-right-child {
   float: none;
   display: inline-block;
 }
