[docs] _layouts/default.html: renamed floats

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -20,10 +20,10 @@
   <body>
     <div id="header">
       <!-- <a name="top"/> -->
-      <div id="title" class="float-left">
+      <div id="title" class="float-left-child">
         <h4>Leonardo C. T. Bezerra</h4>
       </div>
-      <div id="nav" class="float-right">
+      <div id="nav" class="float-right-child">
         <a href="#news"><img src="https://img.shields.io/badge/-news-pink.svg?style=for-the-badge"/></a> 
         <a href="#places"><img src="https://img.shields.io/badge/-places-purple.svg?style=for-the-badge"/></a>
         <a href="#history"><img src="https://img.shields.io/badge/-history-blue.svg?style=for-the-badge&logoColor=white"/></a>
