[docs] assets/css/style.scss: trying to center header

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -5,9 +5,8 @@
 
 #header {
   height: 38px;
-  max-width: 1012px;
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
+  text-align: center;
   top: 0px;
   position: fixed;
   background: black;
