[docs] _layouts/default.html: title badge

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -21,7 +21,8 @@
     <div id="header">
       <!-- <a name="top"/> -->
       <div id="title" class="float-left-child">
-        <h4>Leonardo C. T. Bezerra</h4>
+        <!-- <h4>Leonardo C. T. Bezerra</h4> -->
+        <img src="https://img.shields.io/badge/Leonardo%20Bezerra--.svg?style=for-the-badge"/> 
       </div>
       <div id="nav" class="float-right-child">
         <a href="#news"><img src="https://img.shields.io/badge/-news-pink.svg?style=for-the-badge"/></a> 
