[docs] _layouts/default.html: title badge

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,7 +22,7 @@
       <!-- <a name="top"/> -->
       <div id="title" class="float-left-child">
         <!-- <h4>Leonardo C. T. Bezerra</h4> -->
-        <img src="https://img.shields.io/badge/-Leonardo%20Bezerra-grey.svg?style=for-the-badge"/> 
+        <img src="https://img.shields.io/badge/-Leonardo%20C%2E%20T%2E%20Bezerra-grey.svg?style=for-the-badge"/> 
       </div>
       <div id="nav" class="float-right-child">
         <a href="#news"><img src="https://img.shields.io/badge/-news-pink.svg?style=for-the-badge"/></a> 
