[docs] assets/css/style.scss: .section padding-top

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -61,6 +61,10 @@ strong {
   margin-top: 10px;
 }
 
+.section {
+  padding-top: 48px;
+}
+
 @media screen and (max-width: 950px) {
   .float-left-child {
     display: none;
