--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -17,7 +17,6 @@
 }
 
 body {
-  padding: 20px 0 0 0;
   color: white;
   background: black;
   font-weight: 200;
@@ -72,7 +71,8 @@ strong {
   #header {
     height: 108px;
   }
-  body {
-    padding: 108px 0 0;
+  .markdown-body h2 {
+    padding-top: 108px;
   }
+  
 }
