--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -34,7 +34,7 @@
         <a href="#communication"><img src="https://img.shields.io/badge/-communication-red.svg?style=for-the-badge"/></a>
       </div>
     </div>
-    <div class="container-lg px-3 my-5 markdown-body">
+    <div class="container-lg px-3 markdown-body">
         {{ content }}
     </div>
   </body>
