[docs] _layouts/default.html: news link path

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -25,7 +25,7 @@
         <a href="#top"><img src="https://img.shields.io/badge/-Leonardo%20C%2E%20T%2E%20Bezerra-grey.svg?style=for-the-badge"/></a> 
       </div>
       <div id="nav" class="float-right-child">
-        <a href="#news"><img src="https://img.shields.io/badge/-news-pink.svg?style=for-the-badge"/></a> 
+        <a href="/index.md#news"><img src="https://img.shields.io/badge/-news-pink.svg?style=for-the-badge"/></a> 
         <a href="#places"><img src="https://img.shields.io/badge/-places-purple.svg?style=for-the-badge"/></a>
         <a href="#history"><img src="https://img.shields.io/badge/-history-blue.svg?style=for-the-badge&logoColor=white"/></a>
         <a href="#projects"><img src="https://img.shields.io/badge/-projects-green.svg?style=for-the-badge&logoColor=white"/></a>
