[docs] _laouts/default.html: anchor links

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,16 +22,16 @@
       <!-- <a name="top"/> -->
       <div id="title" class="float-left-child">
         <!-- <h4>Leonardo C. T. Bezerra</h4> -->
-        <a href="#top"><img src="https://img.shields.io/badge/-Leonardo%20C%2E%20T%2E%20Bezerra-grey.svg?style=for-the-badge"/></a> 
+        <a href="/academia/#top"><img src="https://img.shields.io/badge/-Leonardo%20C%2E%20T%2E%20Bezerra-grey.svg?style=for-the-badge"/></a> 
       </div>
       <div id="nav" class="float-right-child">
         <a href="/academia/#news"><img src="https://img.shields.io/badge/-news-pink.svg?style=for-the-badge"/></a> 
-        <a href="#places"><img src="https://img.shields.io/badge/-places-purple.svg?style=for-the-badge"/></a>
-        <a href="#history"><img src="https://img.shields.io/badge/-history-blue.svg?style=for-the-badge&logoColor=white"/></a>
-        <a href="#projects"><img src="https://img.shields.io/badge/-projects-green.svg?style=for-the-badge&logoColor=white"/></a>
-        <a href="#theses"><img src="https://img.shields.io/badge/-supervision-yellow.svg?style=for-the-badge&logoColor=white"/></a>
-        <a href="#publications"><img src="https://img.shields.io/badge/-publications-orange.svg?style=for-the-badge"/></a>
-        <a href="#communication"><img src="https://img.shields.io/badge/-communication-red.svg?style=for-the-badge"/></a>
+        <a href="/academia/#places"><img src="https://img.shields.io/badge/-places-purple.svg?style=for-the-badge"/></a>
+        <a href="/academia/#history"><img src="https://img.shields.io/badge/-history-blue.svg?style=for-the-badge&logoColor=white"/></a>
+        <a href="/academia/#projects"><img src="https://img.shields.io/badge/-projects-green.svg?style=for-the-badge&logoColor=white"/></a>
+        <a href="/academia/#theses"><img src="https://img.shields.io/badge/-supervision-yellow.svg?style=for-the-badge&logoColor=white"/></a>
+        <a href="/academia/#publications"><img src="https://img.shields.io/badge/-publications-orange.svg?style=for-the-badge"/></a>
+        <a href="/academia/#communication"><img src="https://img.shields.io/badge/-communication-red.svg?style=for-the-badge"/></a>
       </div>
     </div>
     <div class="container-lg px-3 markdown-body">
