--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -66,6 +66,24 @@ em {
   padding-top: 53px;
 }
 
+.picture {
+  text-align: center;
+}
+
+.picture img {
+  width: 90%;
+}
+
+.float-parent {
+  overflow: hidden;
+  margin: 0 0 20px 0;
+}
+
+.float-child {
+  float: left;
+  width: 50%;
+}
+
 @media screen and (max-width: 950px) {
   .float-left-child {
     display: none;
