--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -81,12 +81,14 @@ em {
 
 .float-child-logo {
   float: left;
-  width: 30%;
+  width: 180px;
 }
 
 .float-child-description {
   float: left;
-  width: 70%;
+  width: 80%;
+  padding-top: 20px;
+  height: 158px;
 }
 
 @media screen and (max-width: 950px) {
