[docs] assets/css/style.scss: news

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -90,6 +90,10 @@ em {
   padding-top: 10px;
 }
 
+.news {
+  padding-top: 20px;
+}
+
 @media screen and (max-width: 950px) {
   .float-left-child {
     display: none;
