--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -91,7 +91,11 @@ em {
 }
 
 .news {
-  padding-top: 20px;
+  padding-top: 25px;
+}
+
+.badges {
+  padding-top: 30px;
 }
 
 @media screen and (max-width: 950px) {
