[docs] _layouts/default.html: swapped places and news

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -25,8 +25,8 @@
         <a href="/academia/#top"><img src="https://img.shields.io/badge/-Leonardo%20C%2E%20T%2E%20Bezerra-grey.svg?style=for-the-badge"/></a> 
       </div>
       <div id="nav" class="float-right-child">
-        <a href="/academia/#news"><img src="https://img.shields.io/badge/-news-pink.svg?style=for-the-badge"/></a> 
-        <a href="/academia/#places"><img src="https://img.shields.io/badge/-places-purple.svg?style=for-the-badge"/></a>
+        <a href="/academia/#places"><img src="https://img.shields.io/badge/-places-pink.svg?style=for-the-badge"/></a> 
+        <a href="/academia/#news"><img src="https://img.shields.io/badge/-news-purple.svg?style=for-the-badge"/></a>
         <a href="/academia/#history"><img src="https://img.shields.io/badge/-history-blue.svg?style=for-the-badge&logoColor=white"/></a>
         <a href="/academia/#projects"><img src="https://img.shields.io/badge/-projects-green.svg?style=for-the-badge&logoColor=white"/></a>
         <a href="/academia/#theses"><img src="https://img.shields.io/badge/-supervision-yellow.svg?style=for-the-badge&logoColor=white"/></a>
