[docs] head.html: image and author

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -2,13 +2,14 @@
 <title></title>
 <meta name="title" content="Leonardo C. T. Bezerra - Academic webpage">
 <meta name="description" content="Lecturer in Sociotechnical & Responsible AI / Data Science">
+<meta name="author" content="Leonardo Bezerra">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://metatags.io/">
 <meta property="og:title" content="Leonardo C. T. Bezerra - Academic webpage">
 <meta property="og:description" content="Lecturer in Sociotechnical & Responsible AI / Data Science">
-<meta property="og:image" content="img/us.jpg">
+<meta name="image" property="og:image" content="img/map.jpg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
