[docs] _includes: head.html image extension fix

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="https://metatags.io/">
 <meta property="og:title" content="Leonardo C. T. Bezerra - Academic webpage">
 <meta property="og:description" content="Lecturer in Sociotechnical & Responsible AI / Data Science">
-<meta name="image" property="og:image" content="img/map.jpg">
+<meta name="image" property="og:image" content="img/map.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
