--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -3,12 +3,14 @@
 <meta name="title" content="Leonardo C. T. Bezerra - Academic webpage">
 <meta name="description" content="Lecturer in Sociotechnical & Responsible AI / Data Science">
 <meta name="author" content="Leonardo Bezerra">
+<meta name="image" content="img/map.png">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://metatags.io/">
 <meta property="og:title" content="Leonardo C. T. Bezerra - Academic webpage">
 <meta property="og:description" content="Lecturer in Sociotechnical & Responsible AI / Data Science">
+<meta property="og:image" content="img/map.png">
 <meta name="image" property="og:image" content="img/map.png">
 
 <!-- Twitter -->
@@ -16,4 +18,4 @@
 <meta property="twitter:url" content="https://metatags.io/">
 <meta property="twitter:title" content="Leonardo C. T. Bezerra - Academic webpage">
 <meta property="twitter:description" content="Lecturer in Sociotechnical & Responsible AI / Data Science">
-<meta property="twitter:image" content="img/us.jpg">
+<meta property="twitter:image" content="img/map.png">
