[docs] default.html: header menu badge color

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -25,7 +25,7 @@
         <a href="/academia/#top"><img src="https://img.shields.io/badge/-Leonardo%20C%2E%20T%2E%20Bezerra-grey.svg?style=for-the-badge"/></a> 
       </div>
       <div id="nav" class="float-right-child">
-        <a href="/academia/#places"><img src="https://img.shields.io/badge/-places-pink.svg?style=for-the-badge"/></a> 
+        <a href="/academia/#places"><img src="https://img.shields.io/badge/-places-F50292.svg?style=for-the-badge"/></a> 
         <a href="/academia/#news"><img src="https://img.shields.io/badge/-news-purple.svg?style=for-the-badge"/></a>
         <a href="/academia/#history"><img src="https://img.shields.io/badge/-history-blue.svg?style=for-the-badge&logoColor=white"/></a>
         <a href="/academia/#projects"><img src="https://img.shields.io/badge/-projects-green.svg?style=for-the-badge&logoColor=white"/></a>
